# bigbytesdb

./: .gitignore  .yamllint.yml  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  licenserc-ee.toml  licenserc.toml
src/bendpy/: Cargo.toml  README.md  build.rs  pyproject.toml
src/bendpy/src/: context.rs  datablock.rs  dataframe.rs  lib.rs  schema.rs  utils.rs
src/bendpy/tests/: basic.py
src/binaries/: Cargo.toml  README.md
src/binaries/query/: ee_main.rs  entry.rs  oss_main.rs
src/binaries/tool/: table_meta_inspector.rs
src/common/grpc/: Cargo.toml
src/common/grpc/src/: client_conf.rs  dns_resolver.rs  grpc_token.rs  lib.rs
src/common/license/: Cargo.toml
src/common/license/src/: display_jwt_claims.rs  lib.rs  license.rs  license_manager.rs
src/common/openai/: Cargo.toml
src/common/openai/src/: completion.rs  embedding.rs  lib.rs  openai.rs
src/common/storage/: Cargo.toml
src/common/storage/src/: column_node.rs  config.rs  copy.rs  histogram.rs  http_client.rs  lib.rs  merge.rs  metrics.rs  metrics_layer.rs  multi_table_insert.rs  operator.rs  parquet_rs.rs  runtime_layer.rs  stage.rs  statistics.rs
src/common/vector/: Cargo.toml
src/common/vector/src/: distance.rs  lib.rs
src/meta/api/: Cargo.toml
src/meta/api/src/: background_api.rs  background_api_impl.rs  background_api_test_suite.rs  data_mask_api.rs  data_mask_api_impl.rs  kv_app_error.rs  kv_pb_crud_api.rs  lib.rs  meta_txn_error.rs  name_id_value_api.rs  name_value_api.rs  reply.rs  schema_api.rs  schema_api_impl.rs  schema_api_test_suite.rs  sequence_api.rs  sequence_api_impl.rs  testing.rs  txn_backoff.rs  util.rs
src/meta/app/: Cargo.toml
src/meta/app/src/: app_error.rs  data_id.rs  id_generator.rs  key_with_tenant.rs  lib.rs  primitive.rs
src/meta/binaries/: Cargo.toml  README.md
src/meta/binaries/meta/: ee_main.rs  entry.rs  kvapi.rs  oss_main.rs
src/meta/binaries/metabench/: main.rs
src/meta/binaries/metactl/: admin.rs  export_from_disk.rs  export_from_grpc.rs  import.rs  import_v004.rs  main.rs  reading.rs  upgrade.rs
src/meta/binaries/metaverifier/: main.rs
src/meta/client/: Cargo.toml
src/meta/client/src/: endpoints.rs  established_client.rs  grpc_action.rs  grpc_client.rs  grpc_metrics.rs  kv_api_impl.rs  lib.rs  message.rs
src/meta/ee/: Cargo.toml  build.rs
src/meta/ee/src/: lib.rs
src/meta/embedded/: Cargo.toml
src/meta/embedded/src/: lib.rs
src/meta/process/: Cargo.toml
src/meta/process/src/: examples.rs  kv_processor.rs  lib.rs  process.rs  process_meta_dir.rs  rewrite_kv.rs
src/meta/proto-conv/: Cargo.toml
src/meta/proto-conv/src/: background_job_from_to_protobuf_impl.rs  background_task_from_to_protobuf_impl.rs  catalog_from_to_protobuf_impl.rs  client_session_from_to_protobuf_impl.rs  config_from_to_protobuf_impl.rs  connection_from_to_protobuf_impl.rs  data_mask_from_to_protobuf_impl.rs  database_from_to_protobuf_impl.rs  datetime_from_to_protobuf_impl.rs  dictionary_from_to_protobuf_impl.rs  file_format_from_to_protobuf_impl.rs  from_to_protobuf.rs  id_from_to_protobuf_impl.rs  index_from_to_protobuf_impl.rs  least_visible_time_from_to_protobuf_impl.rs  lib.rs  lock_from_to_protobuf_impl.rs  owner_from_to_protobuf_impl.rs  ownership_from_to_protobuf_impl.rs  procedure_from_to_protobuf_impl.rs  role_from_to_protobuf_impl.rs  schema_from_to_protobuf_impl.rs  sequence_from_to_protobuf_impl.rs  stage_from_to_protobuf_impl.rs  table_from_to_protobuf_impl.rs  tenant_quota_from_to_protobuf_impl.rs  tident_from_to_protobuf_impl.rs  token_from_to_protobuf_impl.rs  udf_from_to_protobuf_impl.rs  user_from_to_protobuf_impl.rs  util.rs  virtual_column_from_to_protobuf_impl.rs
src/meta/raft-store/: Cargo.toml
src/meta/raft-store/src/: applier.rs  config.rs  key_spaces.rs  lib.rs  mem_meta.rs  mem_state_machine.rs  snapshot_config.rs  state_machine_api.rs  state_machine_api_ext.rs  utils.rs
src/meta/service/: Cargo.toml
src/meta/service/src/: lib.rs  message.rs  network.rs  raft_client.rs  request_handling.rs  version.rs
src/meta/stoerr/: Cargo.toml
src/meta/stoerr/src/: lib.rs  meta_storage_errors.rs
src/meta/store/: Cargo.toml
src/meta/store/src/: lib.rs
src/meta/types/: Cargo.toml  build.rs
src/meta/types/proto/: meta.proto  raft.proto  request.proto
src/meta/types/src/: applied_state.rs  change.rs  cluster.rs  config.rs  endpoint.rs  eval_expire_time.rs  grpc_config.rs  grpc_helper.rs  lib.rs  log_entry.rs  match_seq.rs  message.rs  non_empty.rs  operation.rs  proto_display.rs  raft_snapshot_data.rs  raft_txid.rs  raft_types.rs  seq_errors.rs  seq_num.rs  snapshot_db.rs  sys_data.rs  time.rs  with.rs
src/query/catalog/: Cargo.toml
src/query/catalog/src/: catalog_kind.rs  cluster_info.rs  database.rs  lib.rs  lock.rs  merge_into_join.rs  query_kind.rs  runtime_filter_info.rs  table.rs  table_args.rs  table_context.rs  table_function.rs  table_with_options.rs
src/query/codegen/: Cargo.toml
src/query/codegen/src/: lib.rs
src/query/config/: Cargo.toml
src/query/config/src/: background_config.rs  builtin.rs  config.rs  global.rs  inner.rs  lib.rs  mask.rs  obsolete.rs
src/query/ee/: Cargo.toml  build.rs
src/query/ee/src/: enterprise_services.rs  lib.rs
src/query/formats/: Cargo.toml
src/query/formats/src/: binary.rs  clickhouse.rs  common_settings.rs  delimiter.rs  file_format_type.rs  lib.rs
src/query/functions/: Cargo.toml  README.md
src/query/functions/benches/: bench.rs
src/query/functions/src/: cast_rules.rs  lib.rs
src/query/management/: Cargo.toml
src/query/management/src/: client_session.rs  connection.rs  errors.rs  file_format.rs  lib.rs  network_policy.rs  password_policy.rs
src/query/script/: Cargo.toml
src/query/script/src/: compiler.rs  executor.rs  ir.rs  lib.rs
tests/sqllogictests/: Cargo.toml  README.md
tests/sqllogictests/scripts/: prepare_tpcds_data.sh  prepare_tpch_data.sh
tests/sqllogictests/src/: arg.rs  error.rs  main.rs  util.rs
tests/sqllogictests/src/client/: global_cookie_store.rs  http_client.rs  mod.rs  mysql_client.rs  ttc_client.rs
(+3369 files in other folders)
