[package]
name = "bendpy"
version = "0.0.0"
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.18.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bigbytesdb"
crate-type = ["cdylib"]

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
arrow-schema = { workspace = true }
ctor = { workspace = true }
bigbytesdb-common-config = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-expression = { workspace = true }
bigbytesdb-common-license = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-meta-embedded = { workspace = true }
bigbytesdb-common-users = { workspace = true }
bigbytesdb-query = { workspace = true, features = [
    "simd",
    "disable_initial_exec_tls",
], default-features = false }
pyo3 = { version = "0.20", features = ["extension-module", "abi3", "abi3-py37"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
