[build-system]
requires = ["maturin>1.1.0"]
build-backend = "maturin"

[project]
name = "bigbytes"
requires-python = ">=3.12"
description = "Bigbytes Python Binding"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
benchmark = []
docs = ["pdoc"]
test = ["pytest", "pandas", "polars"]

[project.urls]
Documentation = "https://bigbytes.com"
Homepage =  "https://bigbytes.com"
"Home-page" =  "https://bigbytes.com"
Repository = "https://github.com/getbigbytes/bigbytes"

[tool.maturin]
features = ["pyo3/extension-module"]
