[build-system]
requires = ["maturin>1.1.0"]
build-backend = "maturin"

[project]
name = "bigbytesdb"
requires-python = ">=3.12"
description = "Bigbytesdb Python Binding"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
benchmark = []
docs = ["pdoc"]
test = ["pytest", "pandas", "polars"]

[project.urls]
Documentation = "https://bigbytesdb.com"
Homepage =  "https://bigbytesdb.com"
"Home-page" =  "https://bigbytesdb.com"
Repository = "https://github.com/getbigbytes/bigbytesdb"

[tool.maturin]
features = ["pyo3/extension-module"]
