[package]
name = "bigbytesdb-binaries"
description = "bigbytesdb command line tools"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[features]
default = ["simd", "jemalloc"]
memory-profiling = [
    "bigbytesdb-query/memory-profiling",
    "bigbytesdb-common-base/memory-profiling",
]
python-udf = ["bigbytesdb-query/python-udf"]
simd = ["bigbytesdb-query/simd"]
jemalloc = ["bigbytesdb-common-base/jemalloc", "bigbytesdb-query/jemalloc"]
io-uring = [
    "bigbytesdb-query/io-uring",
]

[dependencies]
clap = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-config = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-license = { workspace = true }
bigbytesdb-common-meta-client = { workspace = true }
bigbytesdb-common-metrics = { workspace = true }
bigbytesdb-common-storage = { workspace = true }
bigbytesdb-common-tracing = { workspace = true }
bigbytesdb-enterprise-background-service = { workspace = true }
bigbytesdb-enterprise-query = { workspace = true }
bigbytesdb-query = { workspace = true }
bigbytesdb-storages-common-table-meta = { workspace = true }
limits-rs = { workspace = true }
log = { workspace = true }
opendal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serfig = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "bigbytesdb-query"
path = "query/ee_main.rs"
doctest = false
test = false

[[bin]]
name = "bigbytesdb-query-oss"
path = "query/oss_main.rs"
doctest = false
test = false

[[bin]]
name = "table-meta-inspector"
path = "tool/table_meta_inspector.rs"
doctest = false
test = false

[lints]
workspace = true
