[package]
authors = ["Bigbytesdb Authors <opensource@getbigbytes.com>"]
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Bigbytesdb-Sqllogictests is a testing tool to verify the correctness of Bigbytesdb."
edition = "2021"
keywords = ["sqllogictest"]
license = "Apache-2.0"
name = "bigbytesdb-sqllogictests"
readme = "README.md"
repository = "https://github.com/getbigbytes/bigbytesdb/"
version = "0.1.0"

[[bin]]
name = "bigbytesdb-sqllogictests"

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
clap = { workspace = true }
cookie = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
mysql_async = { workspace = true }
rand = { workspace = true }
recursive = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqllogictest = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["mysql", "redis"] }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
