[package]
name = "bigbytes-common-grpc"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
bigbytes-common-base = { workspace = true }
bigbytes-common-exception = { workspace = true }

anyerror = { workspace = true }
hickory-resolver = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
jwt-simple = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tower-service = { workspace = true }

[build-dependencies]

[features]
mocks = []

[lints]
workspace = true
