[package]
name = "bigbytesdb-common-license"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
jwt-simple = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
