[package]
name = "bigbytesdb-common-openai"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
test = true

[dependencies]
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-metrics = { workspace = true }
log = { workspace = true }
openai_api_rust = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
