[package]
name = "bigbytesdb-common-storage"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[features]
storage-hdfs = ["bigbytesdb-common-meta-app/storage-hdfs"]

[dependencies]
anyhow = { workspace = true }
arrow-schema = { workspace = true }
async-backtrace = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
bigbytesdb-common-ast = { workspace = true }
bigbytesdb-common-auth = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-expression = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-metrics = { workspace = true }
bigbytesdb-common-native = { workspace = true }
bigbytesdb-enterprise-storage-encryption = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
opendal = { workspace = true }
parquet = { workspace = true }
prometheus-client = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
