[package]
name = "bigbytes-common-vector"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
bigbytes-common-exception = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[lints]
workspace = true
