[package]
name = "bigbytes-common-meta-api"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
test = true

[dependencies]
anyhow = { workspace = true }
async-backtrace = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-expression = { workspace = true }
bigbytes-common-meta-app = { workspace = true }
bigbytes-common-meta-kvapi = { workspace = true }
bigbytes-common-meta-stoerr = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
bigbytes-common-proto-conv = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
logcall = { workspace = true }
maplit = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
