[package]
name = "bigbytesdb-common-meta-api"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
test = true

[dependencies]
anyhow = { workspace = true }
async-backtrace = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-expression = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-meta-kvapi = { workspace = true }
bigbytesdb-common-meta-stoerr = { workspace = true }
bigbytesdb-common-meta-types = { workspace = true }
bigbytesdb-common-proto-conv = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
logcall = { workspace = true }
maplit = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
