[package]
name = "bigbytes-common-meta-app"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[features]
storage-hdfs = []

[dependencies]
anyerror = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
bigbytes-common-ast = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-expression = { workspace = true }
bigbytes-common-io = { workspace = true }
bigbytes-common-meta-kvapi = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
derive_more = { workspace = true }
enumflags2 = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
opendal = { workspace = true }
paste = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["num-traits"]

[lints]
workspace = true
