[package]
name = "bigbytesdb-common-meta-app"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[features]
storage-hdfs = []

[dependencies]
anyerror = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
bigbytesdb-common-ast = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-expression = { workspace = true }
bigbytesdb-common-io = { workspace = true }
bigbytesdb-common-meta-kvapi = { workspace = true }
bigbytesdb-common-meta-types = { workspace = true }
derive_more = { workspace = true }
enumflags2 = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
opendal = { workspace = true }
paste = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["num-traits"]

[lints]
workspace = true
