[package]
name = "bigbytes-meta-binaries"
description = "bigbytes-meta command line tools"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[features]
default = ["jemalloc"]
memory-profiling = [
    "bigbytes-meta/memory-profiling",
    "bigbytes-common-base/memory-profiling",
]
jemalloc = ["bigbytes-common-base/jemalloc"]
io-uring = [
    "bigbytes-meta/io-uring",
    "bigbytes-common-meta-store/io-uring",
    "bigbytes-common-meta-sled-store/io-uring",
    "bigbytes-common-meta-raft-store/io-uring",
]

[dependencies]
anyerror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-grpc = { workspace = true }
bigbytes-common-meta-api = { workspace = true }
bigbytes-common-meta-app = { workspace = true }
bigbytes-common-meta-client = { workspace = true }
bigbytes-common-meta-kvapi = { workspace = true }
bigbytes-common-meta-raft-store = { workspace = true }
bigbytes-common-meta-sled-store = { workspace = true }
bigbytes-common-meta-store = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
bigbytes-common-tracing = { workspace = true }
bigbytes-meta = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
raft-log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }

[[bin]]
name = "bigbytes-meta"
path = "meta/ee_main.rs"
doctest = false
test = false

[[bin]]
name = "bigbytes-meta-oss"
path = "meta/oss_main.rs"
doctest = false
test = false

[[bin]]
name = "bigbytes-metabench"
path = "metabench/main.rs"
doctest = false
test = false

[[bin]]
name = "bigbytes-metactl"
path = "metactl/main.rs"
doctest = false
test = false

[[bin]]
name = "bigbytes-metaverifier"
path = "metaverifier/main.rs"
doctest = false
test = false

[lints]
workspace = true
