[package]
name = "bigbytesdb-meta-binaries"
description = "bigbytesdb-meta command line tools"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[features]
default = ["jemalloc"]
memory-profiling = [
    "bigbytesdb-meta/memory-profiling",
    "bigbytesdb-common-base/memory-profiling",
]
jemalloc = ["bigbytesdb-common-base/jemalloc"]
io-uring = [
    "bigbytesdb-meta/io-uring",
    "bigbytesdb-common-meta-store/io-uring",
    "bigbytesdb-common-meta-sled-store/io-uring",
    "bigbytesdb-common-meta-raft-store/io-uring",
]

[dependencies]
anyerror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
bigbytesdb-common-grpc = { workspace = true }
bigbytesdb-common-meta-api = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-meta-client = { workspace = true }
bigbytesdb-common-meta-kvapi = { workspace = true }
bigbytesdb-common-meta-raft-store = { workspace = true }
bigbytesdb-common-meta-sled-store = { workspace = true }
bigbytesdb-common-meta-store = { workspace = true }
bigbytesdb-common-meta-types = { workspace = true }
bigbytesdb-common-tracing = { workspace = true }
bigbytesdb-meta = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
raft-log = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }

[[bin]]
name = "bigbytesdb-meta"
path = "meta/ee_main.rs"
doctest = false
test = false

[[bin]]
name = "bigbytesdb-meta-oss"
path = "meta/oss_main.rs"
doctest = false
test = false

[[bin]]
name = "bigbytesdb-metabench"
path = "metabench/main.rs"
doctest = false
test = false

[[bin]]
name = "bigbytesdb-metactl"
path = "metactl/main.rs"
doctest = false
test = false

[[bin]]
name = "bigbytesdb-metaverifier"
path = "metaverifier/main.rs"
doctest = false
test = false

[lints]
workspace = true
