[package]
name = "bigbytes-common-meta-client"
description = "common meta grpc"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
test = true

[dependencies]
anyerror = { workspace = true }
arrow-flight = { workspace = true }
async-backtrace = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-grpc = { workspace = true }
bigbytes-common-meta-api = { workspace = true }
bigbytes-common-meta-kvapi = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
bigbytes-common-metrics = { workspace = true }
bigbytes-common-tracing = { workspace = true }
derive_more = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
logcall = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bigbytes-common-exception = { workspace = true }
rand = { workspace = true }

[build-dependencies]
bigbytes-common-building = { workspace = true }

[lints]
workspace = true
