[package]
name = "bigbytesdb-enterprise-meta"
description = "enterprise features for bigbytesdb-meta"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]

[build-dependencies]
bigbytesdb-common-building = { workspace = true }

[lints]
workspace = true
