[package]
name = "bigbytesdb-common-meta-embedded"
description = "distributed meta data service"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[features]
io-uring = ["bigbytesdb-common-meta-raft-store/io-uring"]

[dependencies]
async-trait = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-meta-api = { workspace = true }
bigbytesdb-common-meta-kvapi = { workspace = true }
bigbytesdb-common-meta-raft-store = { workspace = true }
bigbytesdb-common-tracing = { workspace = true }
fastrace = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
test-harness = { workspace = true }

[lints]
workspace = true
