[package]
name = "bigbytes-common-meta-process"
description = "process meta-service data"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
bigbytes-common-meta-app = { workspace = true }
bigbytes-common-meta-kvapi = { workspace = true }
bigbytes-common-meta-raft-store = { workspace = true }
bigbytes-common-meta-sled-store = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
bigbytes-common-proto-conv = { workspace = true }
bigbytes-common-protos = { workspace = true }
bigbytes-common-tracing = { workspace = true }
openraft = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
