[package]
name = "bigbytesdb-common-meta-process"
description = "process meta-service data"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
bigbytesdb-common-meta-app = { workspace = true }
bigbytesdb-common-meta-kvapi = { workspace = true }
bigbytesdb-common-meta-raft-store = { workspace = true }
bigbytesdb-common-meta-sled-store = { workspace = true }
bigbytesdb-common-meta-types = { workspace = true }
bigbytesdb-common-proto-conv = { workspace = true }
bigbytesdb-common-protos = { workspace = true }
bigbytesdb-common-tracing = { workspace = true }
openraft = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
