[package]
name = "bigbytes-common-meta-raft-store"
description = "Raft state machine"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[features]
io-uring = ["bigbytes-common-meta-sled-store/io-uring"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
chrono = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-exception = { workspace = true }
bigbytes-common-grpc = { workspace = true }
bigbytes-common-meta-kvapi = { workspace = true }
bigbytes-common-meta-sled-store = { workspace = true }
bigbytes-common-meta-stoerr = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
deepsize = { workspace = true }
derive_more = { workspace = true }
fastrace = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
futures-async-stream = { workspace = true }
futures-util = { workspace = true }
hostname = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
maplit = { workspace = true }
num = { workspace = true }
openraft = { workspace = true }
ordq = { workspace = true }
raft-log = { workspace = true }
rmp-serde = { workspace = true }
rotbl = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stream-more = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
bigbytes-common-base = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
