[package]
name = "bigbytes-meta"
description = "distributed meta data service"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[features]
default = []
memory-profiling = ["bigbytes-common-base/memory-profiling", "bigbytes-common-http/memory-profiling"]
io-uring = [
    "bigbytes-common-meta-sled-store/io-uring",
    "bigbytes-common-meta-raft-store/io-uring",
]

[dependencies]
anyerror = { workspace = true }
anyhow = { workspace = true }
arrow-flight = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
clap = { workspace = true }
bigbytes-common-base = { workspace = true }
bigbytes-common-grpc = { workspace = true }
bigbytes-common-http = { workspace = true }
bigbytes-common-meta-api = { workspace = true }
bigbytes-common-meta-client = { workspace = true }
bigbytes-common-meta-kvapi = { workspace = true }
bigbytes-common-meta-raft-store = { workspace = true }
bigbytes-common-meta-sled-store = { workspace = true }
bigbytes-common-meta-stoerr = { workspace = true }
bigbytes-common-meta-types = { workspace = true }
bigbytes-common-metrics = { workspace = true }
bigbytes-common-tracing = { workspace = true }
deepsize = { workspace = true }
derive_more = { workspace = true }
fastrace = { workspace = true }
feature-set = { workspace = true }
futures = { workspace = true }
futures-async-stream = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
logcall = { workspace = true }
maplit = { workspace = true }
poem = { workspace = true }
prometheus-client = { workspace = true }
prost = { workspace = true }
raft-log = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serfig = { workspace = true }
span-map = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
maplit = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
test-harness = { workspace = true }

[build-dependencies]
bigbytes-common-building = { workspace = true }

[lints]
workspace = true
