[package]
name = "bigbytesdb-meta"
description = "distributed meta data service"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[features]
default = []
memory-profiling = ["bigbytesdb-common-base/memory-profiling", "bigbytesdb-common-http/memory-profiling"]
io-uring = [
    "bigbytesdb-common-meta-sled-store/io-uring",
    "bigbytesdb-common-meta-raft-store/io-uring",
]

[dependencies]
anyerror = { workspace = true }
anyhow = { workspace = true }
arrow-flight = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
clap = { workspace = true }
bigbytesdb-common-base = { workspace = true }
bigbytesdb-common-grpc = { workspace = true }
bigbytesdb-common-http = { workspace = true }
bigbytesdb-common-meta-api = { workspace = true }
bigbytesdb-common-meta-client = { workspace = true }
bigbytesdb-common-meta-kvapi = { workspace = true }
bigbytesdb-common-meta-raft-store = { workspace = true }
bigbytesdb-common-meta-sled-store = { workspace = true }
bigbytesdb-common-meta-stoerr = { workspace = true }
bigbytesdb-common-meta-types = { workspace = true }
bigbytesdb-common-metrics = { workspace = true }
bigbytesdb-common-tracing = { workspace = true }
deepsize = { workspace = true }
derive_more = { workspace = true }
fastrace = { workspace = true }
feature-set = { workspace = true }
futures = { workspace = true }
futures-async-stream = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
logcall = { workspace = true }
maplit = { workspace = true }
poem = { workspace = true }
prometheus-client = { workspace = true }
prost = { workspace = true }
raft-log = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serfig = { workspace = true }
span-map = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
maplit = { workspace = true }
pretty_assertions = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
test-harness = { workspace = true }

[build-dependencies]
bigbytesdb-common-building = { workspace = true }

[lints]
workspace = true
