[package]
name = "bigbytesdb-common-meta-stoerr"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
anyerror = { workspace = true }
bigbytesdb-common-exception = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
