[package]
name = "bigbytesdb-common-meta-store"
description = "MetaStore is impl with either a local embedded meta store, or a grpc-client of metasrv"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[features]
io-uring = []

[dependencies]
async-trait = { workspace = true }
bigbytesdb-common-grpc = { workspace = true }
bigbytesdb-common-meta-client = { workspace = true }
bigbytesdb-common-meta-embedded = { workspace = true }
bigbytesdb-common-meta-kvapi = { workspace = true }
bigbytesdb-common-meta-types = { workspace = true }
log = { workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true
